--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -87,12 +87,18 @@ jobs:
       env:
         Configuration: ${{ matrix.configuration }}
 
+    # Build the application
+    - name: Build the application
+      run: dotnet build $env:Solution_Name /p:Configuration=$env:Configuration /property:GenerateFullPaths=true /p:Platform="Any CPU"
+      env:
+        Configuration: ${{ matrix.configuration }}
+
     # Decode the base 64 encoded pfx and save the Signing_Certificate
-    - name: Decode the pfx
-      run: |
-        $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
-        $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath GitHubActionsWorkflow.pfx
-        [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
+    # - name: Decode the pfx
+    #   run: |
+    #     $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
+    #     $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath GitHubActionsWorkflow.pfx
+    #     [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
 
     # # Create the app package by building and packaging the Windows Application Packaging project
     # - name: Create the app package
