--- a/src/DD_Bot.Bot/Dockerfile
+++ b/src/DD_Bot.Bot/Dockerfile
@@ -1,28 +1,13 @@
-# FROM mcr.microsoft.com/dotnet/aspnet:6.0
-
-# COPY src/DD_Bot.Bot/bin/Release/net6.0/ /app/
-# # allow all users access to this so we can run container as non root.
-# RUN chmod -R 775 /app
-# USER root
-
-# WORKDIR /app/
-
-# ENTRYPOINT ["dotnet", "DD_Bot.Bot.dll"]
-
-
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-RUN chmod -R 775 /app 
-USER root
+EXPOSE 5000
 
-# EXPOSE 5000
-
-# ENV ASPNETCORE_URLS=http://+:5000
+ENV ASPNETCORE_URLS=http://+:5000
 
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
 # For more info, please refer to https://aka.ms/vscode-docker-dotnet-configure-containers
-# RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
-# USER appuser
+RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
+USER appuser
 
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ARG configuration=Release
@@ -41,10 +26,3 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "DD_Bot.Bot.dll"]
-
-# To publish:
-# docker buildx build \
-# --push \
-# --platform linux/amd64,linux/arm64 \
-# --tag anshuljkt1/dd-bot-advanced:latest \
-# .
