--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,14 @@
-name: dd-bot
 services:
-  ddbot:
-    container_name: DD_Bot
+  dd-bot-advanced:
+    container_name: dd-bot-advanced
     volumes:
       - ./settings:/app/settings/:rw
       - /var/run/docker.sock:/var/run/docker.sock
     # image: assaro/ddbot:latest
-    image: anshuljkt1/dd-bot-advanced:1.2
+    # image: anshuljkt1/dd-bot-advanced:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: unless-stopped
 #     networks:
 #       - swagSSL
